syntax = "proto3";
package Produit;
// Définition du message Produit
message Produit {
string id = 1;
string title = 2;
string description = 3;
// Ajouter d'autres champs de données pour les films au besoin
}
// Définition des messages de requête et de réponse pour les méthodes d
message GetProduitRequest {
string Produit_id = 1;
}
message GetProduitResponse {
Produit Produit = 1;
}
message SearchProduitsRequest {
string query = 1;
}
message SearchProduitsResponse {
repeated Produit Produits = 1;
}
// Définition du service de films
service produitService {
rpc GetProduit(GetProduitRequest) returns (GetProduitResponse);
rpc SearchProduits(SearchProduitsRequest) returns (SearchProduitsResponse);
// Ajouter d'autres méthodes au besoin
}